Correct a element coloring so its not blue on mobile

--- a/public/stylesheets/god_working.css
+++ b/public/stylesheets/god_working.css
@@ -210,6 +210,7 @@ label {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 a:visited {
